--- a/Github - Vrau/gui-pyqt5/screens versions/old/loadingWindow_v01.ui
+++ b/Github - Vrau/gui-pyqt5/screens versions/old/loadingWindow_v01.ui
@@ -45,7 +45,7 @@ background-color: rgb(30, 30, 30);
       </property>
       <layout class="QGridLayout" name="gridLayout">
        <item row="0" column="0">
-        <widget class="QFrame" name="frame_2">
+        <widget class="QFrame" name="loadingFrame">
          <property name="maximumSize">
           <size>
            <width>300</width>
@@ -65,7 +65,7 @@ background-color: rgb(40,40,40);
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_2">
           <item>
-           <widget class="QLabel" name="label">
+           <widget class="QLabel" name="titleLabel">
             <property name="maximumSize">
              <size>
               <width>16777215</width>
