--- a/Github - Vrau/gui-pyqt5/screens versions/old/methodWindow_v05.ui
+++ b/Github - Vrau/gui-pyqt5/screens versions/old/methodWindow_v05.ui
@@ -137,10 +137,64 @@ border-radius: 3px;
              </size>
             </property>
             <property name="styleSheet">
-             <string notr="true">background-color: rgb(207, 207, 207);</string>
+             <string notr="true">QTabWidget::pane { /* The tab widget frame */
+    border-top: 2px solid #C2C7CB;
+}
+
+QTabWidget::tab-bar {
+    left: 5px; /* move to the right by 5px */
+}
+
+/* Style the tab using the tab sub-control. Note that
+    it reads QTabBar _not_ QTabWidget */
+QTabBar::tab {
+    background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                stop: 0 #E1E1E1, stop: 0.4 #DDDDDD,
+                                stop: 0.5 #D8D8D8, stop: 1.0 #D3D3D3);
+    border: 2px solid #C4C4C3;
+    border-bottom-color: #C2C7CB; /* same as the pane color */
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    min-width: 8ex;
+    padding: 2px;
+}
+
+QTabBar::tab:selected, QTabBar::tab:hover {
+    background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                stop: 0 #fafafa, stop: 0.4 #f4f4f4,
+                                stop: 0.5 #e7e7e7, stop: 1.0 #fafafa);
+}
+
+QTabBar::tab:selected {
+    border-color: #9B9B9B;
+    border-bottom-color: #C2C7CB; /* same as pane color */
+}
+
+QTabBar::tab:!selected {
+    margin-top: 2px; /* make non-selected tabs look smaller */
+}
+
+/* make use of negative margins for overlapping tabs */
+QTabBar::tab:selected {
+    /* expand/overlap to the left and right by 4px */
+    margin-left: -4px;
+    margin-right: -4px;
+}
+
+QTabBar::tab:first:selected {
+    margin-left: 0; /* the first selected tab has nothing to overlap with on the left */
+}
+
+QTabBar::tab:last:selected {
+    margin-right: 0; /* the last selected tab has nothing to overlap with on the right */
+}
+
+QTabBar::tab:only-one {
+    margin: 0; /* if there is only one tab, we don't want overlapping margins */
+}</string>
             </property>
             <property name="currentIndex">
-             <number>1</number>
+             <number>0</number>
             </property>
             <widget class="QWidget" name="searchTab">
              <attribute name="title">
@@ -148,7 +202,7 @@ border-radius: 3px;
              </attribute>
              <layout class="QVBoxLayout" name="verticalLayout_2">
               <item>
-               <widget class="QFrame" name="frame_4">
+               <widget class="QFrame" name="methodFrame">
                 <property name="styleSheet">
                  <string notr="true">QFrame{
 	background-color: rgb(76, 76, 76);
@@ -169,7 +223,7 @@ border-radius: 3px;
                   <number>40</number>
                  </property>
                  <property name="topMargin">
-                  <number>0</number>
+                  <number>15</number>
                  </property>
                  <property name="rightMargin">
                   <number>40</number>
@@ -182,7 +236,7 @@ border-radius: 3px;
                    <property name="maximumSize">
                     <size>
                      <width>16777215</width>
-                     <height>50</height>
+                     <height>100</height>
                     </size>
                    </property>
                    <property name="frameShape">
@@ -199,33 +253,36 @@ border-radius: 3px;
                      <number>0</number>
                     </property>
                     <property name="topMargin">
-                     <number>0</number>
+                     <number>10</number>
                     </property>
                     <property name="rightMargin">
                      <number>0</number>
                     </property>
                     <property name="bottomMargin">
-                     <number>0</number>
+                     <number>10</number>
                     </property>
                     <item>
                      <widget class="QLabel" name="searchLabel">
                       <property name="maximumSize">
                        <size>
                         <width>350</width>
-                        <height>20</height>
+                        <height>30</height>
                        </size>
                       </property>
                       <property name="font">
                        <font>
-                        <pointsize>11</pointsize>
+                        <family>Bahnschrift SemiBold</family>
+                        <pointsize>12</pointsize>
                         <weight>75</weight>
                         <bold>true</bold>
                        </font>
                       </property>
                       <property name="styleSheet">
-                       <string notr="true">color:rgb(235, 235, 235);
-background-color: rgb(85, 82, 125);
-border-radius: 10px;</string>
+                       <string notr="true">QLabel{
+	color:rgb(235, 235, 235);
+	background-color: rgb(85, 82, 125);
+	border-radius: 10px;
+}</string>
                       </property>
                       <property name="text">
                        <string>Insira o nome, ID ou sequência nucleotídica</string>
@@ -243,7 +300,7 @@ border-radius: 10px;</string>
                    <property name="minimumSize">
                     <size>
                      <width>0</width>
-                     <height>200</height>
+                     <height>160</height>
                     </size>
                    </property>
                    <property name="maximumSize">
@@ -268,12 +325,91 @@ border-radius: 3px;
                   </widget>
                  </item>
                  <item>
+                  <widget class="QFrame" name="sequencesAskFrame">
+                   <property name="maximumSize">
+                    <size>
+                     <width>16777215</width>
+                     <height>100</height>
+                    </size>
+                   </property>
+                   <property name="frameShape">
+                    <enum>QFrame::StyledPanel</enum>
+                   </property>
+                   <property name="frameShadow">
+                    <enum>QFrame::Raised</enum>
+                   </property>
+                   <layout class="QHBoxLayout" name="horizontalLayout_7">
+                    <property name="leftMargin">
+                     <number>40</number>
+                    </property>
+                    <property name="topMargin">
+                     <number>0</number>
+                    </property>
+                    <property name="rightMargin">
+                     <number>40</number>
+                    </property>
+                    <item>
+                     <widget class="QLabel" name="sequencesAskLabel">
+                      <property name="minimumSize">
+                       <size>
+                        <width>300</width>
+                        <height>0</height>
+                       </size>
+                      </property>
+                      <property name="maximumSize">
+                       <size>
+                        <width>400</width>
+                        <height>20</height>
+                       </size>
+                      </property>
+                      <property name="font">
+                       <font>
+                        <family>Bahnschrift SemiBold</family>
+                        <pointsize>11</pointsize>
+                        <weight>75</weight>
+                        <bold>true</bold>
+                       </font>
+                      </property>
+                      <property name="styleSheet">
+                       <string notr="true">color:rgb(235, 235, 235);
+background-color: rgb(85, 82, 125);
+border-radius: 10px;</string>
+                      </property>
+                      <property name="text">
+                       <string>Com quantas sequências deseja alinhar?</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QLineEdit" name="sequencesAskLineEdit"/>
+                    </item>
+                   </layout>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QFrame" name="frame_4">
+                   <property name="frameShape">
+                    <enum>QFrame::StyledPanel</enum>
+                   </property>
+                   <property name="frameShadow">
+                    <enum>QFrame::Raised</enum>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
                   <widget class="QFrame" name="frame_5">
                    <property name="maximumSize">
                     <size>
                      <width>16777215</width>
                      <height>80</height>
                     </size>
+                   </property>
+                   <property name="font">
+                    <font>
+                     <family>Bahnschrift SemiBold</family>
+                     <weight>75</weight>
+                     <bold>true</bold>
+                    </font>
                    </property>
                    <property name="frameShape">
                     <enum>QFrame::StyledPanel</enum>
@@ -446,47 +582,6 @@ QPushButton:focus{
                 </property>
                 <layout class="QVBoxLayout" name="verticalLayout_6">
                  <item>
-                  <widget class="QLabel" name="seqLabel">
-                   <property name="maximumSize">
-                    <size>
-                     <width>16777215</width>
-                     <height>20</height>
-                    </size>
-                   </property>
-                   <property name="font">
-                    <font>
-                     <pointsize>11</pointsize>
-                    </font>
-                   </property>
-                   <property name="styleSheet">
-                    <string notr="true">color:rgb(235, 235, 235);
-
-</string>
-                   </property>
-                   <property name="text">
-                    <string>ou digitar a sequência</string>
-                   </property>
-                   <property name="alignment">
-                    <set>Qt::AlignCenter</set>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QLineEdit" name="seqEdit">
-                   <property name="minimumSize">
-                    <size>
-                     <width>100</width>
-                     <height>200</height>
-                    </size>
-                   </property>
-                   <property name="font">
-                    <font>
-                     <pointsize>11</pointsize>
-                    </font>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
                   <widget class="QFrame" name="frame_9">
                    <property name="styleSheet">
                     <string notr="true">QFrame{
@@ -500,48 +595,7 @@ QPushButton:focus{
                    <property name="frameShadow">
                     <enum>QFrame::Raised</enum>
                    </property>
-                   <layout class="QHBoxLayout" name="horizontalLayout_6">
-                    <item>
-                     <widget class="QPushButton" name="insertButton">
-                      <property name="minimumSize">
-                       <size>
-                        <width>0</width>
-                        <height>30</height>
-                       </size>
-                      </property>
-                      <property name="maximumSize">
-                       <size>
-                        <width>100</width>
-                        <height>16777215</height>
-                       </size>
-                      </property>
-                      <property name="styleSheet">
-                       <string notr="true">QPushButton{
-	border-radius: 3px;
-	background-color: rgb(40,40,40);
-	color: rgb(157, 157, 157);
-}
-
-QPushButton:hover{
-	border: 3px solid rgb(90,90,90);
-	border-radius: 3px;
-	background-color: rgb(80,80,80);
-	color: rgb(33, 33, 33);
-}
-
-QPushButton:focus{
-	background-color: rgb(255, 245, 140);
-	border-radius: 3px;
-	color: rgb(33, 33, 33);
-}
-</string>
-                      </property>
-                      <property name="text">
-                       <string>OK</string>
-                      </property>
-                     </widget>
-                    </item>
-                   </layout>
+                   <layout class="QHBoxLayout" name="horizontalLayout_6"/>
                   </widget>
                  </item>
                 </layout>
